--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "postinstall": "npm run lint:fix"
   },
   "build": {
-    "productName": "抽奖系统",
+    "productName": "autopiler",
     "appId": "com.example.yourapp",
     "directories": {
       "output": "build"
@@ -55,12 +55,13 @@
     }
   },
   "dependencies": {
-    "vue": "^2.5.16",
     "axios": "^0.18.0",
+    "electron": "^2.0.4",
+    "element-ui": "^2.5.4",
+    "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "electron": "^2.0.4",
     "vuex-electron": "^1.0.0"
   },
   "devDependencies": {
